massive changes: happy path should work now
