# internal/entrypoint/api/rest/notification/list.go
@@ -2,8 +2,10 @@ package notification
 
 import (
 	"net/http"
+	"strconv"
 
 	responses "github.com/darkcrux/mux-responses"
+	"github.com/gorilla/mux"
 	log "github.com/sirupsen/logrus"
 
 	"github.com/darkcrux/webhook-manager/internal/component/notification"
@@ -17,7 +19,15 @@ func listNotification(service notification.Service) http.HandlerFunc {
 
 		log.Info("create notification started")
 
-		notifs, err := service.List()
+		customerIDStr := mux.Vars(req)["customer-id"]
+		customerID, err := strconv.Atoi(customerIDStr)
+		if err != nil {
+			log.WithError(err).Error("unable to read customer ID")
+			responses.WriteUnreadableRequestError(res)
+			return
+		}
+
+		notifs, err := service.List(customerID)
 		if err != nil {
 			log.WithError(err).Error("unable to list notification")
 			responses.WriteGatewayTimeout(res)
