# internal/entrypoint/api/rest/notification/model.go
@@ -1,0 +1,7 @@
+package notification
+
+type NotificationRequest struct {
+	TransactionTypeID int         `json:"transaction-type-id"`
+	CustomerID        int         `json:"customer-id"`
+	Payload           interface{} `json:"payload"`
+}
